fixed image too large

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -218,7 +218,8 @@ iframe#bikeswarm-youtube {
 	}
 
 	.side-hack-container video,
-	.side-hack-container #love-bot-img {
+	.side-hack-container #love-bot-img,
+	.side-hack-container #mit-press-2020-cover {
 		width: 300px;
 	}
 	iframe#bikeswarm-youtube {
